# Qbu-Crawler

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  check_result.json  config.py  main.py  minio_client.py  models.py  pyproject.toml  scraper.py
.claude/: settings.local.json
.github/workflows/: contract-checks.yml  publish.yml
data/: category_map.csv  safety_tiers.json
deploy/openclaw/: README.md  openclaw.json5.template  sync_openclaw_assets.sh
docs/devlogs/: D001-basic-scraper.md  D002-batch-scraping.md  D002-multi-site-meatyourmaker.md  D003-performance-optimization.md  D004-photos-tile-lazy-load-fix.md  D005-parallel-task-browser-sharing-fix.md  D006-waltons-scraper-and-anti-bot.md  D007-embedded-daily-scheduler.md  D008-openclaw-workspace-output-contract.md  D008-report-data-integrity.md  D009-openclaw-routing-output-analysis-layering.md  D011-openclaw-authoritative-contract.md  D012-report-pdf-email-review-fixes.md  D013-report-redesign.md  D014-basspro-zombie-chrome-fix.md  D014-p008-phase4-monthly-report.md  D015-basspro-cleanup-tabs-regression-fix.md  D015-p008-audit-fixes.md  D016-basspro-cleanup-tabs-hang-debug.md  D016-p009-audit-batch2.md  D017-basspro-seed-profile-root-cause.md  D017-report-ds-v4.md  D018-report-change-trend-governance.md  D019-report-production-p0-p2-remediation.md  D020-test6-report-remediation.md  D021-mym-shadow-root-cold-start.md  D021-test7-report-p0-contract-remediation.md  D022-test7-report-p1-contract-governance.md  D023-test9-run-log-and-p2-manifest.md  (+8 more)
docs/rules/: basspro.md  (+2 more)
qbu_crawler/: __init__.py  cli.py  config.py  minio_client.py  models.py  proxy.py
reports/: scrape-report-2026-03-10.xlsx  scrape-report-2026-03-11.xlsx  scrape-report-2026-03-12.xlsx  scrape-report-2026-03-17.xlsx
scrapers/: __init__.py  base.py  basspro.py  meatyourmaker.py  waltons.py
scripts/: preview_v2_report.py  publish.py  simulate_daily_report.py  test_report_generation.py  test_v3_report.py
server/: app.py  report.py  task_manager.py  translator.py
tests/: test_analytics_envelope.py  test_base_scraper.py  test_cli_backfill.py  test_config_thresholds.py  test_daily_inputs.py  test_filtered_reports.py  test_keyword_matching.py  test_mcp_tools.py  test_metric_semantics.py  test_notifier.py  test_p008_phase1.py  test_p008_phase2.py  test_p008_phase3.py  test_p008_phase4.py  test_p009_audit_batch2.py  test_proxy.py  test_report.py  test_report_analytics.py  test_report_charts.py  test_report_common.py  test_report_ds_flag.py  test_report_excel.py  test_report_integration.py  test_report_llm.py  test_report_pdf.py  test_report_snapshot.py  test_review_analysis.py  test_runtime.py  test_safety_dedup.py  test_scope.py  test_scrape_quality.py  test_template_partials.py  test_tool_contract.py  test_translator.py  test_translator_analysis.py  test_v3_algorithms.py  test_v3_excel.py  test_v3_html.py  test_v3_llm.py  test_v3_mode_semantics.py  (+3 more)
(+330 files in other folders)
