[project]
name = "basspro-scraper"
version = "0.1.0"
description = "Bass Pro Shops 产品爬虫服务"
requires-python = ">=3.10"
dependencies = [
    "drissionpage",
    "fastapi",
    "fastmcp>=2.0.0",
    "minio",
    "openai>=1.0.0",
    "openpyxl>=3.1.0",
    "pillow>=12.1.1",
    "python-dotenv",
    "requests",
    "uvicorn[standard]",
    "pyvirtualdisplay; sys_platform == 'linux'",
]

[tool.uv]
package = false
