[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qbu-crawler"
version = "0.1.38"
description = "多站点产品数据爬虫 — 基于 DrissionPage，支持 Bass Pro / Walton's / Meat Your Maker 等站点"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Leo"}
]
keywords = ["crawler", "scraper", "drissionpage", "basspro", "waltons", "meatyourmaker", "product-data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

dependencies = [
    "drissionpage>=4.0.0",
    "fastapi>=0.100.0",
    "fastmcp>=2.0.0",
    "jinja2>=3.1.0",
    "minio>=7.0.0",
    "openai>=1.0.0",
    "openpyxl>=3.1.0",
    "pillow>=10.0.0",
    "plotly>=5.20.0",
    "playwright>=1.54.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "uvicorn[standard]>=0.23.0",
    "pyvirtualdisplay>=3.0; sys_platform == 'linux'",
    "tzdata>=2024.1; sys_platform == 'win32'",
    "json-repair>=0.58.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/qbu-crawler"
Repository = "https://github.com/yourusername/qbu-crawler"

# CLI 入口点 — uvx / pip install 后可直接运行
[project.scripts]
qbu-crawler = "qbu_crawler.cli:main"
qbu = "qbu_crawler.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["qbu_crawler"]
include = ["qbu_crawler/server/report_templates/**/*"]

[tool.hatch.build.targets.sdist]
include = [
    "qbu_crawler/**/*.py",
    "qbu_crawler/server/report_templates/**/*",
    "main.py",
    "README.md",
    "LICENSE",
    ".env.example",
]
exclude = [
    "data/",
    "tests/",
    "docs/",
    "__pycache__/",
    "*.pyc",
    ".git/",
    ".env",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
